# gpd_ros2

gpd_ros/: CMakeLists.txt  package.xml
gpd_ros/include/gpd_ros/: grasp_detection_node.hpp  grasp_detection_server.hpp  grasp_messages.hpp  grasp_plotter.hpp
gpd_ros/launch/: ur5.launch.py
gpd_ros/msg/: CloudIndexed.msg  CloudSamples.msg  GraspConfig.msg  GraspConfigList.msg  SamplesMsg.msg
gpd_ros/src/: grasp_detection_node.cpp  grasp_detection_server.cpp  grasp_messages.cpp  grasp_plotter.cpp  main.cpp
gpd_ros/srv/: DetectGrasps.srv
